# modern-opengl-tutorial

./: .gitignore  meson.build  readme.org
src/: index_buffer.cpp  index_buffer.hpp  main.cpp  meson.build  opengl.cpp  opengl.hpp  vertex_buffer.cpp  vertex_buffer.hpp
